unpackaged/main/default/objects/Project_Bugs__c/Project_Bugs__c.object-meta.xml
<CustomObject>
    <label>Project Bug</label>
    <nameField>
        <displayFormat>P-Bug-{0000}/{MMYY}</displayFormat>
        <label>Project Bugs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>