unpackaged/main/default/objects/Project_Bugs__c/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <description>Additional Comments</description>
    <inlineHelpText>Additional Comments</inlineHelpText>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>