unpackaged/main/default/objects/Project_Bugs__c/fields/AssigneeRef__c.field-meta.xml
<CustomField>
    <fullName>AssigneeRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned to</description>
    <inlineHelpText>Assigned to</inlineHelpText>
    <label>Assignee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.LicenseType</field>
            <operation>equals</operation>
            <value>Salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>