unpackaged/main/default/objects/Project_Bugs__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Bug/Issue Description</description>
    <inlineHelpText>Bug/Issue Description</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>