unpackaged/main/default/objects/Project_Bugs__c/fields/FixConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>FixConfirmedDate__c</fullName>
    <description>Date project bug fix was confirmed</description>
    <inlineHelpText>Date project bug fix was confirmed</inlineHelpText>
    <label>Fix Confirmed Date</label>
    <type>Date</type>
</CustomField>