unpackaged/main/default/objects/Project_Bugs__c/fields/FixedDate__c.field-meta.xml
<CustomField>
    <fullName>FixedDate__c</fullName>
    <description>Date project bug was fixed</description>
    <inlineHelpText>Date project bug was fixed</inlineHelpText>
    <label>Fixed Date</label>
    <type>Date</type>
</CustomField>