unpackaged/main/default/objects/Project_Bugs__c/fields/IsFixConfirmed__c.field-meta.xml
<CustomField>
    <fullName>IsFixConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>'Raised By' confirms issue/bug is fixed.</description>
    <inlineHelpText>'Raised By' confirms issue/bug is fixed.</inlineHelpText>
    <label>Fix Confirmed</label>
    <type>Checkbox</type>
</CustomField>