unpackaged/main/default/objects/Project_Bugs__c/fields/PriorityPick__c.field-meta.xml
<CustomField>
    <fullName>PriorityPick__c</fullName>
    <description>Priority Level</description>
    <inlineHelpText>Priority Level</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>