unpackaged/main/default/objects/Project_Bugs__c/fields/RaisedBy__c.field-meta.xml
<CustomField>
    <fullName>RaisedBy__c</fullName>
    <description>Who raised the bug/issue</description>
    <inlineHelpText>Who raised the bug/issue</inlineHelpText>
    <label>Raised By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>