unpackaged/main/default/objects/Project_Bugs__c/fields/StatusPick__c.field-meta.xml
<CustomField>
    <fullName>StatusPick__c</fullName>
    <defaultValue>'Not Started'</defaultValue>
    <description>Issue/Bug Status</description>
    <inlineHelpText>Issue/Bug Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed By Design</fullName>
                <color>#33CC00</color>
                <label>Closed By Design</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <color>#33CC00</color>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Fix In-Progress</fullName>
                <color>#FF9900</color>
                <label>Fix In-Progress</label>
            </value>
            <value>
                <fullName>Investigated</fullName>
                <color>#3366FF</color>
                <label>Investigated</label>
            </value>
            <value>
                <fullName>Later Phase</fullName>
                <color>#CC33CC</color>
                <label>Later Phase</label>
            </value>
            <value>
                <fullName>More Info Required</fullName>
                <color>#FF0000</color>
                <label>More Info Required</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <color>#FF0000</color>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Re-opened</fullName>
                <color>#FF6600</color>
                <label>Re-opened</label>
            </value>
            <value>
                <fullName>Testing Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>