unpackaged/main/default/objects/Project_Bugs__c/validationRules/P_Bug_VR1_FixedDateMustBeProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>P_Bug_VR1_FixedDateMustBeProvided</fullName>
    <active>true</active>
    <description>User must provide fixed date when the bug is fixed</description>
    <errorConditionFormula>AND(ISPICKVAL(StatusPick__c ,"Fixed"),
				ISBLANK(FixedDate__c))</errorConditionFormula>
    <errorDisplayField>FixedDate__c</errorDisplayField>
    <errorMessage>Please provide date the bug was fixed.</errorMessage>
</ValidationRule>