unpackaged/main/default/objects/Project_Bugs__c/validationRules/P_BUG_VR2_FixConfirmedDateMustBeProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>P_BUG_VR2_FixConfirmedDateMustBeProvided</fullName>
    <active>true</active>
    <description>User must provide the date the fix was confirmed</description>
    <errorConditionFormula>AND(ISBLANK(FixConfirmedDate__c), 
				AND(IsFixConfirmed__c = TRUE))</errorConditionFormula>
    <errorDisplayField>FixConfirmedDate__c</errorDisplayField>
    <errorMessage>Please provide date the fix was confirmed.</errorMessage>
</ValidationRule>