unpackaged/main/default/objects/Project_Bugs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>StatusPick__c</columns>
    <columns>PriorityPick__c</columns>
    <columns>AssigneeRef__c</columns>
    <columns>Project__c</columns>
    <columns>IsFixConfirmed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>